# wagon-map

./: .editorconfig  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  vite.config.ts.timestamp-1699711172538-d79270302442f.mjs
client/src/: main.tsx
client/src/api/: api.ts  auth.ts
client/src/assets/: railways.json  stations.json
client/src/components/: accountModal.tsx  app.tsx  appBar.tsx  dispatchers.tsx  loginForm.tsx  mapDrawer.tsx  mapSearch.tsx  stationDrawer.tsx  trainDrawer.tsx
client/src/geo/: overpass.ts
client/src/lib/: router.tsx  theme.ts
client/src/pages/: account.tsx  login.tsx  map.tsx  signup.tsx
client/src/ws/: station.ts  train.ts  useWs.ts  ws.ts
server/: .gitignore  Dockerfile  __main__.py  config.py  docker-compose.yml  docker-entrypoint.sh  init_server.py  jwt.py  parse.py  pyproject.toml  railways.json  server.py  stations.json
server/models/: auth.py  path.py  requests.py  station.py  train.py  user.py  wagon.py
server/parser/: coords.py  peregon.py
server/routes/: auth.py  basic_route.py  deps.py  mail.py  register.py  trains.py  web_socket.py
server/schemas/: geojson.py  path.py  station.py  train.py  user.py
server/static_data/: graph.json  station_coords.csv  times_travelled.json
server/util/: build_path.py  mail.py  overpass.py  password.py  train_coords.py
server/ws/: handler.py  manager.py  types.py  ws_data.py
server/ws/events/: __init__.py  update_bounds.py
wagon_emulator/: Dockerfile  __main__.py
